--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 name: Jason Byck
-exclude: [Gemfile, Gemfile.lock, Procfile, sass, coffee]
+exclude: [Gemfile, Gemfile.lock, Procfile, sass, coffee, config.rb]
 pygments: true
