--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "foundation-sites": "^6.2.3"
+    "normalize-css": "^4.2.0",
+    "flat-social-icons": "^0.0.2"
   }
 }
